inc/assets/css/responsive.css
@media (max-width: 1550px) {
  .site-title {
    font-size: 4rem;
  }
  .home-video-header-container {
    height: calc(100dvh - 138px);
  }
}
@media (max-width: 1199px) {
  .site-title {
    font-size: 2.5rem;
  }
  .single-author-article-swiper-section .single-author-img {
    width: 300px;
  }
  .message-for-editor-section img {
    height: auto;
    width: 100%;
  }
  .footer-container button {
    font-size: 16px;
  }
  .footer-container .outer-phone .inner-phone p {
    font-size: 26px;
  }
  .footer-container .outer-phone .inner-phone img {
    height: 40px;
  }
  .footer-container .donate .heart {
    width: 70px;
    height: 45px;
  }
}
@media screen and (max-width: 991px) {
  .site-title {
    font-size: 2.5rem;
  }
  .single-author-article-swiper-section .single-author-img {
    width: 200px;
  }
  .single-author-article-swiper-section p {
    font-size: 0.8rem;
    padding-top: 10px;
  }
  .single-author-article-swiper-section h6 {
    text-align: center;
  }
  .footer-container .custom-width {
    margin-left: 0px;
  }
  .social-icons-mobile {
    padding: 1rem 2rem;
  }
  .social-icons-mobile li {
    display: flex;
    justify-content: center;
    align-items: center;
  }
  .social-icons-mobile li img {
    cursor: pointer;
  }
  .responsive-menu-button {
    display: block;
  }
}
@media (max-width: 767px) {
  .site-title {
    font-size: 2rem;
  }
  .message-for-editor-section p {
    font-size: 1rem;
  }
  .footer-container button {
    font-size: 14px;
  }
  .footer-container .donate .heart {
    width: 65px;
  }
  .contact-us-section {
    background-color: #ec4100;
  }
  .contact-us-section input,
  .contact-us-section textarea,
  .contact-us-section label {
    margin-bottom: 15px;
  }
  .contact-us-section .container form {
    border-radius: 40px;
    background-color: #171717;
  }
  .contact-us-section .container form h4 {
    font-size: 1.2rem;
    color: #ec4100;
    text-transform: uppercase;
  }
  .contact-us-section .container form .next-button {
    outline: none;
    border: none;
    background-color: #ec4100;
    color: #fff;
    font-family: "Lexend-Bold";
    text-align: center;
    padding: 0.75rem 2rem;
    width: 100%;
    margin: 0 5rem;
    border-radius: 30px;
  }
  .contact-us-section .container form .langs button {
    border: 1px solid #ec4100;
    border-radius: 30px;
    padding: 0.75rem 1rem;
    font-size: 1rem;
    font-family: "Lexend-Bold";
    background-color: transparent;
    color: #fff;
  }
  .contact-us-section .container form .langs button.active {
    background-color: #ec4100;
  }
  .contact-us-section .swiper-mobile-pagination .swiper-pagination-bullet-active {
    background-color: #ec4100 !important;
  }
  .contact-us-section .swiper-mobile-pagination .swiper-pagination-bullet {
    background-color: #D9D9D9;
    opacity: 1;
  }
  .custom-modal .modal-body {
    font-size: 1rem;
  }
  .author-swiper-container .custom-swiper-button-prev img {
    height: 50px;
  }
  .author-swiper-container .custom-swiper-button-next img {
    height: 50px;
  }
}
@media (max-width: 575px) {
  .site-title {
    font-size: 1.5rem;
  }
  .single-author-article-swiper-section .single-author-img {
    width: 100%;
  }
  #home-video-header-container {
    display: none;
  }
  .single-article-header-button-container {
    display: none;
  }
  .single-featured-article-container .title {
    font-size: 1rem !important;
  }
  .message-for-editor-section p {
    font-size: 0.8rem;
  }
  .footer-container button {
    font-size: 12px;
  }
  .footer-container .donate .heart {
    width: 55px;
  }
  .contact-us-section .container .next-button {
    margin: 0 2rem;
  }
  .custom-modal .modal-body {
    font-size: 0.8rem;
  }
}
@media (min-width: 1390px) {
  /* change this, by default 1140px */
  .container {
    max-width: 1360px;
  }
}

